--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite 2>&1 | tee dev.log",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,6 +15,7 @@
     "@mui/material": "^7.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.7.1",
     "react-router-dom": "^7.7.1",
     "zustand": "^5.0.6"
   },
