--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^8.9.2",
     "@tanstack/react-query": "^5.84.2",
     "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
